force-app/main/default/objects/custom_create224__c/custom_create224__c.object-meta.xml
<CustomObject>
    <label>Custom created object224</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects224</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>