force-app/main/default/objects/custom_create224__c/fields/custom_create_224field529__c.field-meta.xml
<CustomField>
    <fullName>custom_create_224field529__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 224field529</label>
    <type>Checkbox</type>
</CustomField>